tests/neg-custom-args/no-experimental/experimentalExperimental.scala
class MyExperimentalAnnot // error
extends scala.annotation.experimental // error
